# react-discord

./: .gitignore  CROSS_PLATFORM.md  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
public/: test-upload.html
scripts/: build-select.js  dev-select.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddChannelModal.tsx  CreateServerModal.tsx  DownloadAppModal.tsx  EmojiPicker.tsx  GifPicker.tsx  GiftPicker.tsx  InviteModal.tsx  JoinServerModal.tsx  LoadMoreMessages.tsx  MessageItem.tsx  Modal.tsx  StickerPicker.tsx  VoiceChannelPanel.tsx  VoiceMessageRecorder.tsx
src/hooks/: useSocket.ts  useWebRTC.ts
src/mobile/: App.tsx  index.ts
src/mobile/screens/: HomeScreen.tsx  LoginScreen.tsx  index.ts
src/mock/: data.ts
src/pages/: HomePage.tsx  InviteLandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
src/platform/api/: socketService.ts  tauriService.ts
src/platform/components/: ActivityIndicator.tsx  FlatList.tsx  Image.tsx  KeyboardAvoidingView.tsx  Modal.tsx  Pressable.tsx  SafeAreaView.tsx  ScrollView.tsx  StatusBar.tsx  Text.tsx  TextInput.tsx  TouchableOpacity.tsx  View.tsx  index.ts
src/platform/services/: webrtc.ts
src/platform/types/: tauri.d.ts
src/platform/utils/: platform.ts
src/services/: socketService.ts
src/shared/stores/: index.ts  serverStore.ts  userStore.ts
src/shared/types/: index.ts
src/stores/: serverStore.ts  userStore.ts
