[package]
name = "discord-clone"
version = "1.0.0"
description = "Discord Clone - Cross-platform Desktop App"
authors = ["Developer"]
edition = "2021"

[lib]
name = "discord_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["devtools"] }

[profile.release]
lto = false
opt-level = "z"
